--- a/app/src/main/res/layout/item_game_details_header.xml
+++ b/app/src/main/res/layout/item_game_details_header.xml
@@ -27,7 +27,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_activity_margin"
-        android:textAppearance="@style/TextAppearance.MyTheme.GameDetailsTitle"
+        android:textAppearance="@style/TextAppearance.App.GameDetailsTitle"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintLeft_toRightOf="@id/gameView"
         app:layout_constraintRight_toRightOf="parent"
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_activity_margin"
         android:layout_marginTop="@dimen/spacing_tiny"
-        android:textAppearance="@style/TextAppearance.MyTheme.GameDetailsReleaseDate"
+        android:textAppearance="@style/TextAppearance.App.GameDetailsReleaseDate"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintLeft_toRightOf="@id/gameView"
         app:layout_constraintRight_toRightOf="parent"
@@ -55,7 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_activity_margin"
         android:layout_marginTop="4dp"
-        android:textAppearance="@style/TextAppearance.MyTheme.GameDetailsDeveloper"
+        android:textAppearance="@style/TextAppearance.App.GameDetailsDeveloper"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintLeft_toRightOf="@id/gameView"
         app:layout_constraintRight_toRightOf="parent"
@@ -68,7 +68,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_activity_margin"
-        android:textAppearance="@style/TextAppearance.MyTheme.GameDetailsPublisher"
+        android:textAppearance="@style/TextAppearance.App.GameDetailsPublisher"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintLeft_toRightOf="@id/gameView"
         app:layout_constraintRight_toRightOf="parent"
