--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -89,13 +89,29 @@
                 android:gravity="center"
                 android:includeFontPadding="false"
                 android:minHeight="36dp"
-                android:text="@string/login_screen_help"
-                android:textAppearance="@style/TextAppearance.MyTheme.LabelButton"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:text="@string/login_button_steamid_help"
+                android:textAppearance="@style/TextAppearance.App.LabelButton"
+                app:layout_constraintBottom_toTopOf="@+id/tvPrivacyHint"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btnOk"
+                />
+
+            <TextView
+                android:id="@+id/tvPrivacyHint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:includeFontPadding="false"
+                android:text="@string/login_privacy_hint"
+                android:textAppearance="@style/TextAppearance.App.Caption"
+                android:textSize="13sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvSteamIdHelp"
                 android:layout_marginBottom="@dimen/spacing_small"
+                android:layout_marginTop="@dimen/spacing_normal"
                 />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
