--- a/app/src/main/res/values/type.xml
+++ b/app/src/main/res/values/type.xml
@@ -1,83 +1,83 @@
 <resources>
 
-    <style name="TextAppearance.MyTheme.Headline1" parent="TextAppearance.MaterialComponents.Headline1">
+    <style name="TextAppearance.App.Headline1" parent="TextAppearance.MaterialComponents.Headline1">
         <!--Your custom type style here-->
     </style>
 
-    <style name="TextAppearance.MyTheme.Headline2" parent="TextAppearance.MaterialComponents.Headline2">
+    <style name="TextAppearance.App.Headline2" parent="TextAppearance.MaterialComponents.Headline2">
         <!--Your custom type style here-->
     </style>
 
-    <style name="TextAppearance.MyTheme.Headline3" parent="TextAppearance.MaterialComponents.Headline3">
+    <style name="TextAppearance.App.Headline3" parent="TextAppearance.MaterialComponents.Headline3">
         <!--Your custom type style here-->
     </style>
 
-    <style name="TextAppearance.MyTheme.Headline4" parent="TextAppearance.MaterialComponents.Headline4">
+    <style name="TextAppearance.App.Headline4" parent="TextAppearance.MaterialComponents.Headline4">
         <!--Your custom type style here-->
     </style>
 
-    <style name="TextAppearance.MyTheme.Headline5" parent="TextAppearance.MaterialComponents.Headline5">
+    <style name="TextAppearance.App.Headline5" parent="TextAppearance.MaterialComponents.Headline5">
         <!--Your custom type style here-->
     </style>
 
-    <style name="TextAppearance.MyTheme.Headline6" parent="TextAppearance.MaterialComponents.Headline6">
+    <style name="TextAppearance.App.Headline6" parent="TextAppearance.MaterialComponents.Headline6">
         <!--Your custom type style here-->
     </style>
 
-    <style name="TextAppearance.MyTheme.Subtitle1" parent="TextAppearance.MaterialComponents.Subtitle1">
+    <style name="TextAppearance.App.Subtitle1" parent="TextAppearance.MaterialComponents.Subtitle1">
         <!--Your custom type style here-->
     </style>
 
-    <style name="TextAppearance.MyTheme.Subtitle2" parent="TextAppearance.MaterialComponents.Subtitle2">
+    <style name="TextAppearance.App.Subtitle2" parent="TextAppearance.MaterialComponents.Subtitle2">
         <!--Your custom type style here-->
     </style>
 
-    <style name="TextAppearance.MyTheme.Body1" parent="TextAppearance.MaterialComponents.Body1">
+    <style name="TextAppearance.App.Body1" parent="TextAppearance.MaterialComponents.Body1">
         <!--Your custom type style here-->
     </style>
 
-    <style name="TextAppearance.MyTheme.Body2" parent="TextAppearance.MaterialComponents.Body2">
+    <style name="TextAppearance.App.Body2" parent="TextAppearance.MaterialComponents.Body2">
         <!--Your custom type style here-->
     </style>
 
-    <style name="TextAppearance.MyTheme.Button" parent="TextAppearance.MaterialComponents.Button">
+    <style name="TextAppearance.App.Button" parent="TextAppearance.MaterialComponents.Button">
         <!--Your custom type style here-->
     </style>
 
-    <style name="TextAppearance.MyTheme.Caption" parent="TextAppearance.MaterialComponents.Caption">
+    <style name="TextAppearance.App.Caption" parent="TextAppearance.MaterialComponents.Caption">
         <!--Your custom type style here-->
     </style>
 
-    <style name="TextAppearance.MyTheme.Overline" parent="TextAppearance.MaterialComponents.Overline">
+    <style name="TextAppearance.App.Overline" parent="TextAppearance.MaterialComponents.Overline">
         <!--Your custom type style here-->
     </style>
 
-    <style name="TextAppearance.MyTheme.LabelButton" parent="TextAppearance.MyTheme.Caption">
+    <style name="TextAppearance.App.LabelButton" parent="TextAppearance.App.Caption">
         <item name="android:textColor">@color/label_button_color_selector</item>
         <item name="android:textSize">14sp</item>
     </style>
 
-    <style name="TextAppearance.MyTheme.GameDetailsHeadline" parent="TextAppearance.MaterialComponents.Headline5">
+    <style name="TextAppearance.App.GameDetailsHeadline" parent="TextAppearance.MaterialComponents.Headline5">
         <item name="android:textSize">20sp</item>
     </style>
 
-    <style name="TextAppearance.MyTheme.GameDetailsTitle" parent="TextAppearance.MaterialComponents.Headline5"></style>
+    <style name="TextAppearance.App.GameDetailsTitle" parent="TextAppearance.MaterialComponents.Headline5"></style>
 
-    <style name="TextAppearance.MyTheme.GameDetailsPublisher" parent="TextAppearance.MaterialComponents.Subtitle1">
+    <style name="TextAppearance.App.GameDetailsPublisher" parent="TextAppearance.MaterialComponents.Subtitle1">
         text</style>
 
-    <style name="TextAppearance.MyTheme.GameDetailsDeveloper" parent="TextAppearance.MaterialComponents.Subtitle1">
+    <style name="TextAppearance.App.GameDetailsDeveloper" parent="TextAppearance.MaterialComponents.Subtitle1">
         <item name="fontFamily">sans-serif-medium</item>
         <item name="android:fontFamily">sans-serif-medium</item>
     </style>
 
-    <style name="TextAppearance.MyTheme.GameDetailsReleaseDate" parent="TextAppearance.MaterialComponents.Subtitle1">
+    <style name="TextAppearance.App.GameDetailsReleaseDate" parent="TextAppearance.MaterialComponents.Subtitle1">
         <item name="android:alpha">?alphaEmphasisHigh</item>
         <item name="android:textAppearance">?textAppearanceSubtitle1</item>
         <item name="android:textSize">14sp</item>
     </style>
 
-    <style name="TextAppearance.MyTheme.BottomSheet.Title" parent="TextAppearance.MaterialComponents.Headline6">
+    <style name="TextAppearance.App.BottomSheet.Title" parent="TextAppearance.MaterialComponents.Headline6">
 
     </style>
 
