kotlin synthetics migrated to View Binding

--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/root_fragment_library"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:colorBackground"
@@ -40,12 +39,14 @@
         />
 
     <include
+        android:id="@+id/empty"
         layout="@layout/empty_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
 
     <include
+        android:id="@+id/progress"
         layout="@layout/fullscreen_progress"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
