--- a/app/src/main/res/layout/fragment_roulette.xml
+++ b/app/src/main/res/layout/fragment_roulette.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/roulette_fragment_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
@@ -86,6 +85,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <include
+        android:id="@+id/empty"
         layout="@layout/empty_layout"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -96,6 +96,7 @@
         />
 
     <include
+        android:id="@+id/progress"
         layout="@layout/fullscreen_progress"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -105,6 +106,8 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         />
 
-    <include layout="@layout/main_toolbar" />
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/main_toolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
