--- a/app/src/main/res/layout/item_app_library.xml
+++ b/app/src/main/res/layout/item_app_library.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:padding="@dimen/default_activity_margin"
     android:background="?selectableItemBackground"
@@ -40,7 +41,8 @@
         android:layout_weight="0"
         android:layout_marginStart="@dimen/spacing_small"
         android:src="@drawable/ic_chevron_right"
-        android:tint="?colorOnBackground"
+        app:tint="?colorOnBackground"
         android:layout_gravity="center"
+        android:visibility="gone"
         />
 </LinearLayout>
