--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -47,13 +47,7 @@
 
     <include
         android:id="@+id/progress"
-        layout="@layout/fullscreen_progress"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        layout="@layout/progress"
         />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
