--- a/app/src/main/res/layout/fragment_library_filter.xml
+++ b/app/src/main/res/layout/fragment_library_filter.xml
@@ -65,14 +65,14 @@
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:clipToPadding="false"
             android:paddingLeft="@dimen/default_activity_margin"
             android:paddingRight="@dimen/default_activity_margin"
             android:paddingBottom="@dimen/default_activity_margin"
             android:scrollbarStyle="outsideOverlay"
+            app:layout_constrainedHeight="true"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHeight_default="wrap"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/headerGuideline"
